# c_c-_tp

./: .travis.yml  CMakeLists.txt  README.md  test.txt  test5x4.txt
cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  prog  tests
linters/: .run.sh.swo  run.sh
project/include/: creating_matrix.h  parab.h  transposition_consistant.h  transposition_parallel.h
project/src/: a.out  creating_matrix.c  main.c  parab.c  penmp  stress_tes.c  stress_tes.gcda  stress_tes.gcno  stress_test.c  transposition_consistant.c  transposition_parallel.c
project/test/: test.cpp  tests.cpp
